tests/baselines/reference/interfaceMergeWithNonGenericTypeArguments.errors.txt
interfaceMergeWithNonGenericTypeArguments.ts(4,34): error TS2315: Type 'SomeBaseClass' is not generic.
interfaceMergeWithNonGenericTypeArguments.ts(6,3): error TS2346: Call target does not contain any signatures.


==== interfaceMergeWithNonGenericTypeArguments.ts (2 errors) ====
    export class SomeBaseClass { }
    export interface SomeInterface { }
    export interface MergedClass extends SomeInterface { }
    export class MergedClass extends SomeBaseClass<any> {
                                     ~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'SomeBaseClass' is not generic.
    	public constructor() {
    		super();
    		~~~~~
!!! error TS2346: Call target does not contain any signatures.
    	}
    }